--- a/src/Components/QuestionForm/QuestionForm.css
+++ b/src/Components/QuestionForm/QuestionForm.css
@@ -90,7 +90,7 @@
     }
 
     #close-button {
-        transform: translate(103px, -10px)
+        transform: translate(112px, -12px)
     }
 }
 
